# OrbitWarsTrainer

./: .gitignore  README.md  pyproject.toml  requirements.txt  submission0.py  submission_surf_v9.py
scripts/: debug_candidate_selection.py  evaluate_map_seeds.py  evaluate_model.py  export_submission.py  train_model.py  train_ppo.py  watch_model_vs_agent.py  watch_model_vs_model.py  watch_model_vs_starter.py  watch_starter_vs_starter.py
src/orbit_wars_rl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/orbit_wars_rl/agents/: heuristic_agent.py  model_agent.py  random_agent.py  starter_agent.py  submission_agent.py
src/orbit_wars_rl/core/: actions.py  candidates.py  comets.py  geometry.py  observations.py  planets.py  state_tracker.py  types.py  vector.py
src/orbit_wars_rl/env/: kaggle_env.py  ppo_planet_env.py  wrappers.py
src/orbit_wars_rl/evaluation/: evaluate.py  metrics.py  tournaments.py
src/orbit_wars_rl/models/: policy.py  save_load.py  sb3_policy.py
src/orbit_wars_rl/training/: callbacks.py  ppo_config.py  ppo_train.py  reward.py  self_play.py  train.py
src/orbit_wars_rl/visualization/: debug_candidates.py  (+3 more)
tests/: test_action_decoder.py  test_callbacks.py  test_candidate_selection.py  test_comets.py  test_evaluate.py  test_export_submission.py  test_export_submission_ppo.py  test_geometry.py  test_model_agent.py  test_observation_builder.py  test_ppo_config.py  test_ppo_planet_env_fake.py  test_quadrants.py  test_reward.py  test_save_load.py  test_sb3_policy_adapter.py  test_starter_agent.py  test_train_ppo_smoke.py  test_watch.py
